# ml-fraud-detection-system

./: Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  server.py
api/controllers/: __init__.py  frauds_controller.py
api/dependencies/: __init__.py  dependencies.py
api/routes/: __init__.py  frauds_route.py  swagger_route.py
api/services/: __init__.py  frauds_service.py
docker/: .dockerignore  Dockerfile
lib/common/: logger.py
lib/config/: __init__.py  secret.py  settings.py
lib/models/: __init__.py  api_model.py  transaction_record_model.py
lib/repositories/: __init__.py  fraud_repository.py
notebook/: EDA_fraud_transaction.ipynb  Traning_fraud_transaction.ipynb
